--- a/LoginForm.resx
+++ b/LoginForm.resx
@@ -119,13 +119,13 @@
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="userNameLoginTextBox.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 9.75pt</value>
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="userNameLoginTextBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>92, 140</value>
   </data>
   <data name="userNameLoginTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>162, 27</value>
+    <value>162, 22</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="userNameLoginTextBox.TabIndex" type="System.Int32, mscorlib">
@@ -144,7 +144,7 @@
     <value>5</value>
   </data>
   <data name="passwordLoginTextBox.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 9.75pt</value>
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="passwordLoginTextBox.Location" type="System.Drawing.Point, System.Drawing">
     <value>92, 196</value>
@@ -153,7 +153,7 @@
     <value>•</value>
   </data>
   <data name="passwordLoginTextBox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>162, 27</value>
+    <value>162, 22</value>
   </data>
   <data name="passwordLoginTextBox.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -171,7 +171,7 @@
     <value>4</value>
   </data>
   <data name="LoginButton.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 9.75pt</value>
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="LoginButton.Location" type="System.Drawing.Point, System.Drawing">
     <value>92, 243</value>
@@ -197,23 +197,27 @@
   <data name="&gt;&gt;LoginButton.ZOrder" xml:space="preserve">
     <value>3</value>
   </data>
-  <data name="loginLabel.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="loginLabel.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Left, Right</value>
   </data>
   <data name="loginLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 26.25pt</value>
+    <value>Microsoft Sans Serif, 26.25pt</value>
   </data>
   <data name="loginLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>108, 35</value>
+    <value>-1, 35</value>
   </data>
   <data name="loginLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>128, 62</value>
+    <value>335, 55</value>
   </data>
   <data name="loginLabel.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
   </data>
   <data name="loginLabel.Text" xml:space="preserve">
     <value>Log In</value>
+  </data>
+  <data name="loginLabel.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
+    <value>MiddleCenter</value>
   </data>
   <data name="&gt;&gt;loginLabel.Name" xml:space="preserve">
     <value>loginLabel</value>
@@ -227,50 +231,23 @@
   <data name="&gt;&gt;loginLabel.ZOrder" xml:space="preserve">
     <value>2</value>
   </data>
-  <data name="usernameLabel.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="usernameLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 9.75pt</value>
-  </data>
-  <data name="usernameLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>88, 114</value>
-  </data>
-  <data name="usernameLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>77, 23</value>
-  </data>
-  <data name="usernameLabel.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
-  </data>
-  <data name="usernameLabel.Text" xml:space="preserve">
-    <value>Password:</value>
-  </data>
-  <data name="&gt;&gt;usernameLabel.Name" xml:space="preserve">
-    <value>usernameLabel</value>
-  </data>
-  <data name="&gt;&gt;usernameLabel.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;usernameLabel.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;usernameLabel.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
   <data name="passwordLabel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="passwordLabel.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Poppins, 9.75pt</value>
+    <value>Microsoft Sans Serif, 9.75pt</value>
   </data>
   <data name="passwordLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>88, 170</value>
+    <value>89, 172</value>
   </data>
   <data name="passwordLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 23</value>
+    <value>71, 16</value>
   </data>
   <data name="passwordLabel.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
+    <value>6</value>
+  </data>
+  <data name="passwordLabel.Text" xml:space="preserve">
+    <value>Password:</value>
   </data>
   <data name="&gt;&gt;passwordLabel.Name" xml:space="preserve">
     <value>passwordLabel</value>
@@ -282,6 +259,36 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;passwordLabel.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="userLabel.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="userLabel.Font" type="System.Drawing.Font, System.Drawing">
+    <value>Microsoft Sans Serif, 9.75pt</value>
+  </data>
+  <data name="userLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>89, 116</value>
+  </data>
+  <data name="userLabel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>74, 16</value>
+  </data>
+  <data name="userLabel.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="userLabel.Text" xml:space="preserve">
+    <value>Username:</value>
+  </data>
+  <data name="&gt;&gt;userLabel.Name" xml:space="preserve">
+    <value>userLabel</value>
+  </data>
+  <data name="&gt;&gt;userLabel.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;userLabel.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;userLabel.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -293,12 +300,8 @@
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>334, 311</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>loginLabel</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>LoginForm</value>
